Updates iban/bic validator